# d3bate

./: .firebaserc  .gitignore  .gitmodules  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  firebase.json  firestore.rules  index.html  mkdocs.yml  netlify.toml  robots.txt  search.html  search_index.en.js  sitemap.xml  styles.css
.github/: CODEOWNERS  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend-tests.yml  codeql.yml  deploy.yml  docs.yml  firebase.yml  frontend-tests.yml  functional-tests.yml  greetings.yml  stale.yml  tests.yml
app/: README.md  package-lock.json  package.json
app/public/: firebase-messaging-sw.js  index.html  manifest.json
app/src/: App.css  App.js  App.scss  index.js
app/src/components/: AreaUnderConstruction.js  CalendarEvent.js  Card.js  Checkbox.js  DatePicker.js  Footer.js  MessageBoard.js  Navbar.js  PasswordReset.js  TakeRegister.js  ViewEvent.js
app/src/sync/: index.js  messages.js  models.js
app/src/views/: Calendar.js  CalendarEvent.js  Dashboard.js  DebateJudger.js  EditCalendar.js  Login.js  Profile.js  (+3 more)
app/tests/: App.test.js
backend/: Cargo.toml  Procfile  Rocket.toml  app.db  app.py  auth.py  club.py  error_messages.py  models.py  requirements.txt  run.sh  tests.py  tests.sh
backend/auth/: __init__.py
backend/db/: __init__.py
backend/migrations/2019-12-16-110756_create_users/: up.sql
backend/migrations/2019-12-16-161249_initial_models/: up.sql
backend/migrations/versions/: 37838173c282_.py  39480a1484c8_.py  51d6962345fc_.py  76af1fa67c47_.py  92089a34d190_.py  989de7ed4f21_.py  c523574bfbd4_.py  c6bd6765c9f9_.py  e1c5cefd1c0e_.py
backend/performant_websockets/: Cargo.toml
backend/performant_websockets/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/performant_websockets/migrations/2020-03-24-171332_intitial_migration/: up.sql
backend/performant_websockets/src/: db.rs  lib.rs  schema.rs  server.rs
backend/src/: connection.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/auth/: error.rs  mod.rs  routes.rs
backend/src/clubs/: mod.rs
backend/src/helpers/: mod.rs
backend/src/users/: auth.rs  handler.rs  mod.rs  query_functions.rs
backend/templates/: base.html  confirm_failiure.html  confirm_verification.html  email_confirmation.html
backend/websockets/: __init__.py
client/: App.js  app.json  bsconfig.json  constants.js  graphql_schema.json  helpers.js  index.html  indexProduction.html  package-lock.json  package.json  relay.config.js  schema.graphql  webpack.config.js
client/__tests__/: index.js
client/components/: DateInput.tsx  Messages.js  Navbar.js  TimePicker.tsx
client/routing/: routing.native.js  routing.web.js
client/src/: App.re  Binding.re  Client.re  Index.re  Login.re  Navbar.re  Register.re  State.re  Styles.re
client/state/: auth.js  clubs.js  index.js  livestream.js  trainingSessions.js  websockets.js
client/styles/: CustomButton.tsx  index.js
client/utils/: index.js
client/views/: Club.js  ClubOverview.js  ClubTrainingSessions.js  Clubs.js  Dashboard.js  EditClubTrainingSessions.js  Login.js  Register.js  TrainingSessionLivestream.js
data/: Cargo.toml
data/src/: lib.rs  schema.rs
debating-howto/: index.html
debating-howto/argumentation/: index.html
debating-howto/background/: index.html
dev/: index.html
docs/: config.toml  getting-started.md  index.md
docs/content/: _index.md
docs/howto/: index.md
docs/sass/: styles.scss
docs/templates/: base.html  index.html  section.html
functions/: index.js  package-lock.json
getting-started/: index.html
howto/: index.html
howto/argumentation/: index.html
howto/background/: index.html
manual/: index.html
migrations/2020-05-22-110932_initial_models/: up.sql
ml/: bayes.py
search/: search_index.json
server/: Cargo.toml
server-test-macros/: Cargo.toml
server-test-macros/src/: lib.rs
server/src/: auth.rs  email.rs  graphql.rs  main.rs  templates.rs  tests.rs
server/src/graphql/: mod.rs  mutation.rs  query.rs
server/src/tests/: mod.rs  utils.rs
server/templates/: confirm_email.html  email_base.html
(+43 files in other folders)
