[package]
name = "backend"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel={version = "1.4.0", features = ["sqlite"]}
dotenv = "0.9.0"
rocket="0.4.2"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool"]
