[package]
name = "backend"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
diesel={version = "1.4.0", features = ["sqlite"]}
dotenv = "0.9.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
rust-crypto = "0.2.36"
jsonwebtoken = "6"
serde = { version = "1.0", features = ["derive"] }
serde_derive="1"
bcrypt = "0.6"
failure = "0.1.6"
