[package]
name = "server"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper={version="0.14"}
chrono="0.4"
diesel = {version="1", features=["postgres", "chrono", "r2d2"]}
warp="0.2"
log="0.4"
env_logger="0.7"
tokio={version="0.2", features=["macros"]}
data={path="../data"}