[package]
name = "server"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper={git="https://github.com/graphql-rust/juniper", rev="31d0888"}
chrono={version="0.4", features=["serde"]}
diesel = {version="1", features=["postgres", "chrono", "r2d2"]}
actix-web = { version = "2.0.0", features = ["rustls"] }
actix="0.9.0"
actix-rt="1.0.0"
tokio={version="0.2", features=["time"]}
data={path="../data"}
juniper_actix={git="https://github.com/graphql-rust/juniper", rev="31d0888"}
jsonwebtoken="7"
serde={version="1", features=["derive"]}
futures="0.3"
bcrypt = "0.8"
reqwest={version="0.10.4", optional=true}
askama = "0.8"
cfg-if="0.1"
base64="0.12"

[features]
default=["email"]
email=["reqwest"]
email_test=["reqwest"]