[package]
name = "performant_websockets"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.2"
actix-web-actors = "2.0.0"
actix-web = "3.0.0-alpha.1"
