[package]
name = "performant_websockets"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[lib]
name="performant_websockets"
crate-type=["cydlib"]

[dependencies]
actix = "0.10.0-alpha.2"
actix-web-actors = "2.0.0"
actix-web = "3.0.0-alpha.1"
diesel = "1.4.4"

[dependencies.pyo3]
version = "0.9.1"
features = ["extension-module"]